# VeNo

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Getting-Started.md  LICENSE  README.md  _clang-format  post-build.sh  pre-run.sh
Plugin/: CMakeLists.txt
Plugin/Assets/: CMakeLists.txt
Plugin/Assets/UIFiles/: FXSection.vui  LFO.vui  MainGui.vui  OSC.vui  Sidebar.vui
Plugin/Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Plugin/Source/VUtils/: CMakeLists.txt  Curve.cpp  Environment.cpp  Environment.h  FileHandler.cpp  FileHandler.h  LogInclude.h  Logger.cpp  Logger.h  Logging.cpp  Logging.h  Math.cpp  Math.h  StringUtils.cpp  StringUtils.h
Plugin/Source/VeNo/: CMakeLists.txt  Definitions.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  TypeDefs.h
Plugin/Source/VeNo/Core/: CMakeLists.txt  Config.cpp  Config.h  Instance.cpp  Instance.h  PresetManager.cpp  PresetManager.h  PropertiesWrapper.h
Plugin/Source/VeNo/Core/Parameter/: Handler.cpp  Handler.h  ModulateParameter.cpp  Parameter.cpp  Parameter.h  ParameterHandlerSetup.cpp
Plugin/Source/VeNo/Core/State/: ComponentStates.cpp  ComponentStates.h  InstanceState.cpp  InstanceState.h
Plugin/Source/VeNo/Core/Theme/: Theme.cpp
Plugin/Source/VeNo/Events/: CMakeLists.txt  Event.h  EventCB.cpp  EventCB.h  EventHandler.cpp  EventHandler.h  GUIEvents.h  WaveEvents.h
Plugin/Source/VeNo/GUI/: ActionRegistry.cpp  ActionRegistry.h  CMakeLists.txt  ComponentFactories.h  Flex.cpp  Flex.h  GUIFiles.cpp  GUIFiles.h  GUIUtils.cpp  Utils.h
Plugin/Source/VeNo/GUI/Components/: BaseComponent.cpp  BaseComponent.h  BigMatrix.cpp  BigMatrix.h  Button.cpp  Button.h  CMakeLists.txt  ComponentGroup.cpp  ComponentGroup.h  Components.h  FXListSort.cpp  FXListSort.h  Knob.cpp  Knob.h  Label.cpp  Label.h  Logo.cpp  Logo.h  Matrix.cpp  Matrix.h  NestedComponent.cpp  NestedComponent.h  Preset.cpp  Preset.h  PresetList.cpp  PresetList.h  ScrollComponent.cpp  ScrollComponent.h  SelectComponent.cpp  SelectComponent.h  Switch.cpp  Tabbed.cpp  Tabbed.h  ToggleButton.cpp  VComponent.h  WaveEditor.cpp  WaveEditor.h  WaveForm.cpp  WaveForm.h  WaveThumbnails.cpp  (+1 more)
Plugin/Source/VeNo/GUI/Events/: LCDListener.cpp  LCDListener.h  LiveLabel.cpp  LiveLabel.h  ModulateMouseOpen.cpp  ModulateMouseOpen.h
Plugin/Source/VeNo/GUI/Factory/: ButtonFactory.cpp  CMakeLists.txt  ComponentFactory.cpp  KnobComponentFactory.cpp  LabelComponentFactory.cpp  MixedFactories.cpp  SliderComponentFactory.cpp  SwitchFactory.cpp  ToggleButtonFactory.cpp  WaveEditorFactory.cpp
Plugin/Source/VeNo/GUI/Fonts/: Fonts.cpp  Icons.h
Plugin/Source/VeNo/GUI/GuiLang/: CMakeLists.txt  FactoryMapping.cpp  GUIHandler.cpp  GUIInit.cpp  GuiInterpreter.cpp  Init.cpp  Init.h  Interpreter.cpp  Interpreter.h  Parser.cpp  Structs.h  UIParser.cpp  UIParser.h  UIUtils.cpp  UIUtils.h
Plugin/Source/VeNo/GUI/Theme/: CMakeLists.txt  Theme.cpp  Theme.h
Plugin/Source/VeNo/Sound/: Buffer.cpp  Buffer.h  CMakeLists.txt  Structs.cpp  Structs.h
Plugin/Source/VeNo/Sound/DSP/: CMakeLists.txt  FX.h  FXChain.cpp  FXChain.h  Widener.cpp  Widener.h
Plugin/Source/VeNo/Sound/Generation/: CMakeLists.txt  Envelope.cpp  EnvelopeStructs.h  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h  OscillatorStructs.h
Plugin/Source/VeNo/Sound/Synth/: CMakeLists.txt  Matrix.cpp  Matrix.h  MidiHandler.cpp  Modulatoren.cpp  Modulatoren.h  ParameterCacheStruct.cpp  ParameterCacheStruct.h  ParameterEventHandler.cpp  ParameterEventHandler.h  SynthVoice.cpp  SynthVoice.h  Synthesizer.cpp  Synthesizer.h
Plugin/Source/VeNo/Sound/Tables/: CMakeLists.txt  Structs.cpp  Structs.h  TableCreator.cpp  TableCreator.h  TableCreatorWaves.cpp  TableGenerator.cpp  WaveLib.cpp  WaveLib.h  WaveTable.cpp  WaveTable.h
Plugin/Source/VeNo/Utils/: CMakeLists.txt  FFT.cpp  FFT.h  LookupTable.h  Math.h  Profile.cpp  Profile.h  Random.cpp  Random.h  Timer.h  WavePointUtils.cpp  WavePointUtils.h
Plugin/Source/VeNo/Window/: CMakeLists.txt  WaveEditor.cpp
Plugin/Source/vendors/: CMakeLists.txt
Plugin/Source/vendors/NameGen/: NameGen.cpp  NameGen.h
Plugin/Source/vendors/fastnoise/: fastnoiselite.h
Plugin/Source/vendors/fmt/: args.h  chrono.h  color.h  core.h  format-inl.h  format.h  os.h
Plugin/headers/: JuceHeader.h
Plugin/headers/VUtils/: Curve.h  Environment.h  FileHandler.h  LogDefines.h  LogInclude.h  Logger.h  Logging.h  Math.h  OsCheck.h  StringUtils.h
Plugin/headers/VUtils/Storage/: SafeMap.h  SafeQueue.h
Plugin/headers/VeNo/: Definitions.h  PluginEditor.h  PluginProcessor.h  TypeDefs.h
Plugin/headers/VeNo/Core/: Config.h  Instance.h  PropertiesWrapper.h
Plugin/headers/VeNo/Core/Parameter/: Handler.h  Parameter.h
Plugin/headers/VeNo/Core/State/: ComponentStates.h  InstanceState.h
Plugin/headers/VeNo/Core/Theme/: Theme.h
Plugin/headers/VeNo/Events/: Event.h  EventHandler.h
Plugin/headers/VeNo/GUI/: ActionRegistry.h  ComponentFactories.h  Flex.h  GUIFiles.h  GUIUtils.h
Plugin/headers/VeNo/GUI/Components/: BaseComponent.h  Button.h  ComponentGroup.h  Knob.h  Label.h  Logo.h  NestedComponent.h  ScrollComponent.h  SelectComponent.h  Switch.h  Tabbed.h  ToggleButton.h  VComponent.h  WaveEditor.h  WaveThumbnails.h
Plugin/headers/VeNo/GUI/Events/: LiveLabel.h
Plugin/headers/VeNo/GUI/Fonts/: Fonts.h  Icons.h
Plugin/headers/VeNo/GUI/GuiLang/: GUIHandler.h  GUIInit.h  GuiInterpreter.h  Init.h  Interpreter.h  Parser.h  Structs.h  UIParser.h  UIUtils.h
Plugin/headers/VeNo/GUI/Theme/: Theme.h
Plugin/headers/VeNo/Sound/: Structs.h
Plugin/headers/VeNo/Sound/Generation/: Envelope.h  EnvelopeStructs.h  LFO.h  Oscillator.h  OscillatorStructs.h
Plugin/headers/VeNo/Sound/Synth/: Matrix.h  MidiHandler.h  ParameterEventHandler.h  SynthVoice.h  Synthesizer.h
Plugin/headers/VeNo/Sound/Tables/: Structs.h  TableGenerator.h  WaveLib.h  (+1 more)
Plugin/headers/VeNo/Structs/: Wave.h
Plugin/headers/VeNo/Utils/: ProfileMacros.h  WavePointUtils.h
Plugin/headers/VeNo/Window/: WaveEditor.h
Plugin/headers/fmt/: compile.h  ostream.h  printf.h  ranges.h  xchar.h
(+71 files in other folders)
